Create Api for adding slide
