# backEnd/app/Models/Slide.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Slide extends Model
+{
+    use HasFactory;
+    protected $fillable = [
+        'title',
+        'link',
+        'file',
+        'alt'
+    ];
+}
