# backEnd/routes/api.php
@@ -1,6 +1,8 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\SlideController;
+use App\Http\Controllers\Api\V1\FileController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -21,4 +23,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::prefix('v1')->namespace('api\v1')->group(function(){
     Route::post('register_user',[AuthController::class,'RegisterUser']);
     Route::post('login_user',[AuthController::class,'LoginUser']);
+    Route::post('slide_create',[SlideController::class,'create']);
+    Route::post('upload_file',[FileController::class,'upload']);
 });
